Fixed problem with z-index of header

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,7 +51,7 @@ header {
   height: 72px;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 100;
 }
 
 nav {
@@ -67,6 +67,7 @@ nav {
   top: 0;
   max-width: 1180px;
   right: 195px;
+  z-index: 100;
 }
 
 .content {
@@ -78,7 +79,6 @@ nav {
   margin-top: 72px;
   background-color: rgba(255, 255, 255, 0.6);
   padding: 20px;
-  z-index: 0;
 }
 
 .center {
